--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
             <version> 1.1.1</version>
             <scope>test</scope>
         </dependency>
+        <!-- PostgreSQL driver -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.5.4</version>
+        </dependency>
 
     </dependencies>
 
